fix: fix shift

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,10 +61,6 @@ h1 {
   background: rgba(222, 160, 244, 0.4);
 }
 
-.keyboard__key:active {
-  background: rgba(222, 160, 244, 0.9);
-}
-
 .keyboard__key_act {
   background: rgba(222, 160, 244, 0.9);
 }
@@ -102,4 +98,12 @@ h1 {
 
 .keyboard__key--active::after {
   background: #08ff00;
+}
+
+.keyboard__key:active {
+  background: rgba(222, 160, 244, 0.9);
+}
+
+.keyboard__key_wide:active {
+  background: rgba(222, 160, 244, 0.9);
 }
